# AI_lifestyle_Project

./: .env.example  .gitignore  README.md  plot_steps_per_user.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_v2.py
charts/: summary.csv
data/: daily_aggregates_obese_20_1year_sdv.csv  heart_rate_6users_1year_persona.csv  heart_rate_6users_1year_persona_fixed_dates.csv  heart_rate_7users_daily_avgHR_CLEAN_v2.csv  heart_rate_7users_overtrained_full.csv  steps_6users_1year_persona.csv  steps_6users_1year_persona_fixed_dates.csv  steps_7users_overtrained_full.csv  users_obese_20_1year_sdv.csv
notebooks/: 01_activity_classification.ipynb  01_explore_data.ipynb  02_Keras_Neural_Network.ipynb  02_activty_classification.ipynb  03_Keras_HR_Per_Point.ipynb  Keras_Neural_Network.ipynb
saved/: activity_cnn_5classes.h5  activity_cnn_5classes_v2.keras  label_encoder_activity.pkl  label_encoder_activity_v2.pkl  lstm_steps_hr.pth  scaler_activity.pkl  scaler_activity_v2.pkl  scalers.pkl
sql/: activity.csv  energy.csv  heart_rate.csv  sanity_checks.sql  sleep.csv  steps.csv
